# DuckCoding

./: .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: README.md  build-release.yml  pr-check-comment.yml  pr-check.yml
scripts/: make-dmg.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_regex.rs
src-tauri/resources/: claude_code_settings.schema.json  codex_config.schema.json
src-tauri/resources/original-schema/: gemini-cli-schema.json  source-links.json
src-tauri/src/: http_client.rs  lib.rs  main.rs
src-tauri/src/commands/: balance_commands.rs  config_commands.rs  mod.rs  onboarding.rs  profile_commands.rs  proxy_commands.rs  session_commands.rs  stats_commands.rs  tool_commands.rs  tool_management.rs  types.rs  update_commands.rs  watcher_commands.rs
src-tauri/src/commands/tool_commands/: installation.rs  update.rs
src-tauri/src/core/: http.rs  logger.rs
src-tauri/src/data/: README.md  error.rs  manager.rs  migration_tests.rs  mod.rs
src-tauri/src/data/cache/: json_cache.rs  lru.rs  mod.rs  sql_cache.rs
src-tauri/src/data/managers/: env.rs  json.rs  mod.rs  sqlite.rs  toml.rs
src-tauri/src/logging/: commands.rs  config.rs  dynamic_filter.rs  logger.rs  mod.rs
src-tauri/src/models/: config.rs  mod.rs  proxy_config.rs  tool.rs
src-tauri/src/services/: config.rs  config_watcher.rs  installer.rs  migration.rs  mod.rs  profile_store.rs  proxy.rs  proxy_config_manager.rs  transparent_proxy.rs  version.rs
src-tauri/src/services/config/: claude.rs  watcher.rs
src-tauri/src/services/migration_manager/: manager.rs  migration_trait.rs  mod.rs
src-tauri/src/services/migration_manager/migrations/: mod.rs  profile.rs  profile_v2.rs  proxy_config.rs  proxy_config_split.rs  session_config.rs  sqlite_to_json.rs
src-tauri/src/services/profile_manager/: manager.rs  mod.rs  native_config.rs  types.rs
src-tauri/src/services/proxy/: config.rs  mod.rs  proxy_instance.rs  proxy_manager.rs  proxy_service.rs  transparent_proxy.rs  transparent_proxy_config.rs
src-tauri/src/services/proxy/headers/: claude_processor.rs  codex_processor.rs  gemini_processor.rs  mod.rs
src-tauri/src/services/proxy/utils/: body.rs  error_responses.rs  loop_detector.rs  mod.rs
src-tauri/src/services/session/: manager.rs
src-tauri/src/services/tool/: db.rs  detector_trait.rs  installer.rs  mod.rs  registry.rs  tools_config.rs  version.rs
src-tauri/src/services/tool/detectors/: claude_code.rs  codex.rs  gemini_cli.rs  mod.rs
src-tauri/src/services/tool/registry/: detection.rs  instance.rs  mod.rs  query.rs  version_ops.rs
src-tauri/src/services/update/: update_service.rs
src-tauri/src/setup/: initialization.rs  mod.rs  tray.rs
src-tauri/src/utils/: command.rs  config.rs  file_helpers.rs  installer_scanner.rs  mod.rs
src/components/: TodayStatsCard.tsx  ToolAdvancedConfigDialog.tsx  ToolConfigManager.tsx  UsageChart.tsx
src/components/Onboarding/: onboarding.css
src/components/Onboarding/config/: versions.ts
src/components/config-managers/: ClaudeConfigManager.tsx  CodexConfigManager.tsx  GeminiConfigManager.tsx  index.ts
src/components/dialogs/: UpdateDialog.tsx
src/components/layout/: AppSidebar.tsx
src/components/tool-config/: Fields.tsx  types.ts  utils.ts
src/components/ui/: toast.tsx  toaster.tsx
src/hooks/: use-toast.ts  useAppEvents.ts  useProfileLoader.ts  useUpdate.ts
src/lib/: tauri-commands.ts
src/lib/tauri-commands/: proxy.ts  types.ts
src/pages/ConfigurationPage/: index.tsx
src/pages/ConfigurationPage/components/: ApiConfigForm.tsx
src/pages/ConfigurationPage/hooks/: useConfigManagement.ts
src/pages/DashboardPage/: index.tsx
src/pages/ProfileManagementPage/: index.tsx
src/pages/ProfileSwitchPage/: index.tsx
src/pages/SettingsPage/: index.tsx
src/pages/StatisticsPage/: index.tsx
src/pages/ToolManagementPage/: index.tsx
src/types/: profile.ts
src/utils/: formatting.ts
(+40 files in other folders)
