[package]
name = "duckcoding"
version = "1.2.0"
description = "DuckCoding AI 工具一键配置"
authors = ["DuckCoding"]
edition = "2021"
default-run = "duckcoding"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
toml = "0.9"
toml_edit = "0.23"
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
regex = "1"
anyhow = "1"
chrono = "0.4"
once_cell = "1"
semver = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
