[package]
name = "duckcoding"
version = "1.3.3"
description = "DuckCoding AI 工具一键配置"
authors = ["DuckCoding"]
edition = "2021"
default-run = "duckcoding"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
toml = "0.9"
toml_edit = "0.23"
reqwest = { version = "0.12", features = ["json", "socks", "stream"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
urlencoding = "2.1"
regex = "1"
anyhow = "1"
thiserror = "1"
chrono = "0.4"
once_cell = "1"
semver = "1"
# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
tower = "0.4"
pin-project-lite = "0.2"
bytes = "1"
futures-util = "0.3"
async-trait = "0.1"
# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }
# 单例模式
lazy_static = "1.5"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
